# ambyte-iot

./: .env.example  .gitignore  README.draft.md  README.md  ambit-demo-workbook.jii  device-script-delivery.md  payload.json  plan-ambyteIotLudo.prompt.md  platformio.ini  sched_lua_embed.h  sdkconfig.defaults  sdkconfig.esp32-s3-devkitm-1
ambitPIO/: MERGE_PLAN.md
components/CLI/: CLI.c  CMakeLists.txt
components/ambit_flash/: CMakeLists.txt  ambit_flash.c  ambit_flash_port.h  loader_port_ambyte.c
components/ambit_flash/include/: ambit_flash.h
components/ambit_ota/: CMakeLists.txt  ambit_ota.c
components/bme280/: bme280_driver.cpp
components/command_router/: CMakeLists.txt  command_router.c
components/device_commands/: CMakeLists.txt  device_commands.c
components/device_config/: device_config.c
components/event_log/: event_log.c
components/lua_runner/: CMakeLists.txt  lua_runner.c  sched.lua
components/mqtt_client/: CMakeLists.txt  mqtt_client.c
components/ota_update/: ota_update.c
components/sd_card/: sd_card.c  (+1 more)
docs/: ambit-ota-hwtest.md  ambit-uart-flash-plan.md  append-log-persistence-plan.md  build_script_payload.py  exampleMain.lua  mqtt-payload.md  ota-update-plan.md  payload-v2-plan.md  push-main-lua-via-mqtt.md  workbook-OpenJII.md
flash/: .gitignore  README.md  allowed_macs.txt  flash.cmd  flash.py  flash.sh
main/: CMakeLists.txt  app_main.c
planning/: hwtest-publish-reliability.md
test/: read_export.ipynb
tools/: _prov_env.py  build_nvs_image.py  flash_certs.cmd  flash_certs.py  flash_certs.sh  get_mac.py  save_mac.py
(+40 files in other folders)
